# split-git-commit

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  split_git_commit.py
scripts/: build-and-push.sh  setup-local.sh
