[metadata]
name = split_git_commit
version = 0.1.0
description = A tool to automatically split large Git commits.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexpizarroj/split-git-commit
author = Alex Pizarro
author_email = alex.pizarro.j@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
py_modules = split_git_commit
install_requires =
    GitPython>=3.1.27
python_requires = >=3.9

[options.entry_points]
console_scripts =
    split-git-commit = split_git_commit:main

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[flake8]
max-line-length = 120
